# DeskMate

./: .gitattributes  .gitignore  .prettierignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts  vitest.config.ts
.github/workflows/: build-windows.yml  ci.yml  publish-pets.yml  release.yml
assets/pets/yanghao/: ASSET_LICENSE.txt  pet.json
catalog/: index.html
docs/: release-checklist.md
docs/design/: deskmate-design-system.md
docs/superpowers/plans/: 2026-07-22-online-pet-catalog.md  (+2 more)
online-pets/agumon-baby-flame/: pet.json
online-pets/blue-guga/: pet.json
online-pets/caocao-bear/: pet.json
online-pets/hwjin-black/: pet.json
online-pets/ikkun/: pet.json
online-pets/lansha/: pet.json
scripts/: build-online-pets.mjs  check-pet-sync.mjs  generate-catalog.mjs  online-pets.test.mjs  validate-pet.mjs  workflows.verify.mjs
src/: App.test.tsx  App.tsx  main.test.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  motion.rs  pet_asset_scope.rs  pets.rs  reminders.rs  runtime.rs  settings.rs
src/components/: Onboarding.test.tsx  Onboarding.tsx  PetPreview.test.tsx  PetPreview.tsx  PetSizeSetting.test.tsx  PetSizeSetting.tsx  PetSprite.test.tsx  PetSprite.tsx  PetThumbnail.test.tsx  PetThumbnail.tsx  PetWindow.test.tsx  PetWindow.tsx  ReminderBubble.test.tsx  ReminderBubble.tsx  SettingsApp.test.tsx  SettingsApp.tsx
src/domain/: animation.test.ts  animation.ts  pets.test.ts  pets.ts  reminders.test.ts  reminders.ts  settings.test.ts  settings.ts
src/lib/: tauri.test.ts  tauri.ts
(+6 files in other folders)
